<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/translator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/translatorField"
        android:textSize="60dp" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="250dp" />

    <Button
        android:id="@+id/translateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/inputText"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button"
        android:text="@string/translateButton"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/inputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="220dp"
        android:text="@string/textToTranslateField"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/translatedTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/inputText"
        android:layout_marginBottom="221dp"
        android:text="@string/translatedTextField"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/translatedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/inputText"
        android:layout_marginBottom="174dp"
        android:text="@string/translatedText"
        android:textSize="18dp" />

    <Button
        android:id="@+id/flashButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:text="@string/flashButton"
        android:textSize="25dp" />

</RelativeLayout>